--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">Github</a>.
+      This site was crafted by <a href="http://mgkrishnan.com">MG Krishnan</a> (<a href="https://twitter.com/vaideee">@vaideee</a>).<br>
     </small>
   </div>
 </footer>
