--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,10 +1,10 @@
 <div class="py2 post-footer">
-  <img src="{{ site.baseurl }}/images/me.jpeg" alt="John Otander" class="avatar" />
+  <img src="{{ site.baseurl }}/images/gopal.jpeg" alt="M G Krishnan" class="avatar" />
   <p>
-    Pixyll is an open-source Jekyll theme that's built by <a href="http://johnotander.com">John Otander</a>.
-    When he's not writing code and building things, he likes to ski. A. Lot.
+    This site is built for <a href="http://mgkrishnan.com">MG Krishnan</a>.
+    When he's not thinking and reading, he likes to write. A. Lot.
   </p>
   <p>
-    Follow him on <a href="https://twitter.com/4lpine">Twitter</a>.
+    Follow him on <a href="https://twitter.com/vaideee">Twitter</a>.
   </p>
 </div>
